# advent_of_code_2024

./: .gitignore  aoc-cli.md
day_01/: part1.cpp  part2.cpp  puzzle.md
day_02/: part1.cpp  part2.cpp
day_03/: part1.cpp  part2.cpp  puzzle.md
day_04/: part1.cpp  part2.cpp
day_05/: build.sh
day_16/: CMakeLists.txt
